--- a/css/main.css
+++ b/css/main.css
@@ -13,3 +13,15 @@
   font-size: 15px;
   background-color: rgba(255, 255, 255, 0.9);
 }
+
+.grey-text {
+  font-size: 14px;
+  line-height: 16px;
+  font-weight: bold;
+}
+
+@media (min-width: 1200px) {
+  .main-con {
+    min-width: 1310px !important;
+  }
+}
